src/orc/static/orc.css
hr.orc-hr {
    border: revert;
}
    
div.orc-input-filtered {
    display: none;
}

div.orc-room-buttons {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}
    
div.orc-routine-buttons {
    display: flex;
    flex-direction: horizontal;
    overflow: auto;
    justify-content: space-between;
}

div.orc-button {
    width: 75px;
    margin-bottom: 10px;
    text-align: center;
}
div.orc-button-label {
    height: 4em;
    font-size: 10px; 
    margin-bottom: 5px;
    display: flex;
    flex-flow: column-reverse;
}   
div#admin-navbar-collapse {
    align-items: baseline;
}
div#orc-theme-form-elements {
    display: grid;
    grid-template-columns: 2fr 2fr 1fr;
    background-color: transparent;
}
div.orc-theme-form-date-input {
    grid-column-start: 2;
    grid-column-end: 4;
}

div.orc-button-next {
    display: flex;
    flex-direction;
    gap: 10px;
}

div.orc-overflow {
    overflow: visible;
}

div#orc-config td {
    padding-left: 10px;
    padding-right: 10px;
}

div#orc-config th {
    padding-left: 10px;
    padding-right: 10px;
}

svg.orc-ribbon {
    height: 28px;
    width: 28px;
    position: absolute;
    top: 0px;
    left: 0px;
    display: none;
}

button.orc-runner {
    position: relative;
}

